demos/remote-k8s/improve-security/frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: globoticket
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: globoticket
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: psgloboticketlearn.azurecr.io/frontend
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "750m"
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: acr-secret
